Improve the overall implementation.